welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:40: error: unclosed character literal
  if (lireMessage()=='') {
                     ^BDRBuggle:40: error: ')' expected but something found.
  if (lireMessage()=='') {
                     ^BDRBuggle:43: error: illegal start of simple expression
} 
^